testsuite/tests/module/T11432a.stderr

T11432a.hs:7:17: error:
    Expecting a type constructor but found a variable, ‘-.->’.
    If ‘-.->’ is a type constructor then enable ExplicitNamespaces and use the 'type' keyword.
